--- a/Views/Employee/Edit.cshtml
+++ b/Views/Employee/Edit.cshtml
@@ -40,84 +40,74 @@
                     <ul class="list-inline m-0 p-0">
                         <li class="d-flex mb-2">
                             <div class="mb-3 w-100">
-                                <label for="code" class="form-label text-black">Number:</label>
-                                <input type="text" name="code" class="form-control text-black" id="code" value="" disabled>
+                                <label for="code" class="form-label text-black required">Number:</label>
+                                <input type="text" name="code" class="form-control text-black" id="code" value="" disabled required>
                             </div>
                         </li>
                         <li class="d-flex mb-2">
                             <div class="mb-3 w-100">
-                                <label for="name" class="form-label text-black">Name:</label>
-                                <input type="text" name="name" class="form-control text-black" id="name" value="" disabled>
-                                <div id="name-help" class="form-text">We'll never share your email with anyone else.</div>
+                                <label for="name" class="form-label text-black required">Name:</label>
+                                <input type="text" name="name" class="form-control text-black" id="name" value="" disabled required>
                             </div>
                         </li>
                         <li class="d-flex mb-2">
                             <div class="mb-3 w-100">
-                                <label for="gender" class="form-label text-black">Gender:</label>
-                                <select class="form-select text-black" id="gender" name="gender" data-placeholder="Choose gender" disabled>
+                                <label for="gender" class="form-label text-black required">Gender:</label>
+                                <select class="form-select text-black" id="gender" name="gender" data-placeholder="Choose gender" disabled required>
                                     <option selected></option>
                                     <option value="Nam">Nam</option>
                                     <option value="Nữ">Nữ</option>
                                 </select>
-                                <div id="gender-help" class="form-text">We'll never share your email with anyone else.</div>
                             </div>
                         </li>
                         <li class="d-flex mb-2">
                             <div class="mb-3 w-100">
-                                <label for="dob" class="form-label text-black">Date of birth:</label>
-                                <input type="date" name="dob" class="form-control text-black" id="dob" value="" disabled>
-                                <div id="dob-help" class="form-text">We'll never share your email with anyone else.</div>
+                                <label for="dob" class="form-label text-black required">Date of birth:</label>
+                                <input type="date" name="dob" class="form-control text-black" id="dob" value="" disabled required>
                             </div>
                         </li>
                         <li class="d-flex mb-2">
                             <div class="mb-3 w-100">
-                                <label for="address" class="form-label text-black">Address:</label>
-                                <input type="text" name="address" class="form-control text-black" id="address" value="" disabled>
-                                <div id="address-help" class="form-text">We'll never share your email with anyone else.</div>
+                                <label for="address" class="form-label text-black required">Address:</label>
+                                <input type="text" name="address" class="form-control text-black" id="address" value="" disabled required>
                             </div>
                         </li>
                         <li class="d-flex mb-2">
                             <div class="mb-3 w-100">
-                                <label for="id" class="form-label text-black">ID:</label>
-                                <input type="text" name="id" class="form-control text-black" id="id" value="" disabled>
-                                <div id="id-help" class="form-text">We'll never share your email with anyone else.</div>
+                                <label for="id" class="form-label text-black required">ID:</label>
+                                <input type="text" name="id" class="form-control text-black" id="id" value="" disabled required>
                             </div>
                         </li>
                         <li class="d-flex mb-2">
                             <div class="mb-3 w-100">
-                                <label for="placeog" class="form-label text-black">Place of origin:</label>
-                                <input type="text" name="placeog" class="form-control text-black" id="placeog" value="" disabled>
-                                <div id="placeog-help" class="form-text">We'll never share your email with anyone else.</div>
+                                <label for="placeog" class="form-label text-black required">Place of origin:</label>
+                                <input type="text" name="placeog" class="form-control text-black" id="placeog" value="" disabled required>
                             </div>
                         </li>
                         <li class="d-flex mb-2">
                             <div class="mb-3 w-100">
-                                <label for="phone" class="form-label text-black">Phone:</label>
-                                <input type="tel" name="phone" class="form-control text-black" id="phone" value="" disabled>
-                                <div id="phone-help" class="form-text">We'll never share your email with anyone else.</div>
+                                <label for="phone" class="form-label text-black required">Phone:</label>
+                                <input type="tel" name="phone" class="form-control text-black" id="phone" value="" disabled required>
                             </div>
                         </li>
                         <li class="d-flex mb-2">
                             <div class="mb-3 w-100">
-                                <label for="email" class="form-label text-black">Email:</label>
-                                <input type="email" name="email" class="form-control text-black" id="email" value="" disabled>
-                                <div id="email-help" class="form-text">We'll never share your email with anyone else.</div>
+                                <label for="email" class="form-label text-black required">Email:</label>
+                                <input type="email" name="email" class="form-control text-black" id="email" value="" disabled required>
                             </div>
                         </li>
                         <li class="d-flex mb-2">
                             <div class="mb-3 w-100">
                                 <label for="religion" class="form-label text-black">Religion:</label>
                                 <input type="text" name="religion" class="form-control text-black" id="religion" value="" disabled>
-                                <div id="religion-help" class="form-text">We'll never share your email with anyone else.</div>
                             </div>
                         </li>
                         <li class="d-flex mb-2">
                             <div class="mb-3 w-100">
-                                <label for="department" class="form-label text-black">Department:</label>
-                                <select class="form-select" id="department" name="department" data-placeholder="Choose one department" disabled>
+                                <label for="department" class="form-label text-black required">Department:</label>
+                                <select class="form-select" id="department" name="department" data-placeholder="Choose one department" disabled required>
                                     <option></option>
                                 </select>
-                                <div id="department-help" class="form-text">We'll never share your email with anyone else.</div>
                             </div>
                         </li>
                         <li class="d-flex mb-2">
@@ -126,13 +116,14 @@
                                 <select class="form-select" id="degrees" name="degrees" data-placeholder="Choose degree(s)" multiple disabled>
                                     <option></option>
                                 </select>
-                                <div id="degrees-help" class="form-text">We'll never share your email with anyone else.</div>
                             </div>
                         </li>
                         <li class="d-flex mb-2">
                             <div class="mb-3 w-100">
-                                <label for="contract" class="form-label text-black">Contract:</label>
-                                <input type="text" name="contract" class="form-control text-black" id="contract" value="" disabled>
+                                <label for="contract" class="form-label text-black required">Contract:</label>
+                                <select class="form-select" id="contract" name="contract" data-placeholder="Choose one contract" disabled required>
+                                    <option></option>
+                                </select>
                             </div>
                         </li>
                     </ul>
@@ -217,6 +208,7 @@
                             let degree_confirm = data.degree_confirm;
                             let degrees = data.degrees;
                             let contract = data.contract;
+                            let contracts = data.contracts;
 
                             $(".emp-code").text(employee.EMP_NUM);
                             $(".emp-name").text(employee.EMP_NAME);
@@ -238,7 +230,6 @@
                             $("input#email").val(employee.EMP_EMAIL);
                             $("input#religion").val((employee.EMP_REL == "" || employee.EMP_REL == null) ? "No" : employee.EMP_REL);
                             $("input#position").val(employee.USER_POS);
-                            $("input#contract").val(contract.CONTR_NUM);
 
                             department.forEach(function (item, index) {
                                 $("select#department").append("<option value='" + item.DEPT_CODE + "'>" + item.DEPT_NAME + "</option>")
@@ -263,6 +254,16 @@
                                 closeOnSelect: false,
                             });
 
+                            contracts.forEach(function (item, index) {
+                                $("select#contract").append("<option value='" + item.CONTR_NUM + "'>" + item.CONTR_NUM + "</option>")
+                            })
+                            $("select#contract").val(contract.CONTR_NUM);
+                            $('select#contract').select2({
+                                theme: "bootstrap-5",
+                                width: $(this).data('width') ? $(this).data('width') : $(this).hasClass('w-100') ? '100%' : 'style',
+                                placeholder: $(this).data('placeholder')
+                            });
+
                             $("#my-modal").fadeOut();
                             break;
                         default:
@@ -276,9 +277,11 @@
             $("#about-info .edit").click(function () {
                 $("#about-info .edit, #projects-info .edit, #projects-info .add").removeClass("text-danger text-primary").addClass("text-light");
                 $("#about-info .submit").removeClass("text-light").addClass("text-success");
-                $("#name, #gender, #dob, #address, #placeog, #religion, #department, #degrees").prop("disabled", false);
+                $("#name, #gender, #dob, #address, #placeog, #religion, #department, #degrees, #contract").prop("disabled", false);
             })
             $("#about-info .submit").click(function () {
+
+
                 let name = $("input#name").val();
                 let gender = $("select#gender").val();
                 let dob = $("input#dob").val();
@@ -313,7 +316,7 @@
                                 $(this).removeClass("text-success").addClass("text-light");
                                 $("#about-info .edit, #projects-info .edit").removeClass("text-light").addClass("text-danger");
                                 $("#projects-info .add").removeClass("text-light").addClass("text-primary");
-                                $("#name, #gender, #dob, #address, #placeog, #religion, #department, #degrees").prop("disabled", true);
+                                $("#name, #gender, #dob, #address, #placeog, #religion, #department, #degrees, #contract").prop("disabled", true);
 
                                 AppendAlert("Update successfully!", StatusAlert.Success);
                                 break;
