--- a/Views/Employee/Index.cshtml
+++ b/Views/Employee/Index.cshtml
@@ -28,6 +28,10 @@
                                     <a class="dropdown-item" href="#">Time tracked</a>
                                 </div>
                             </div>
+                            <a href="/Employee/Add" class="text-body me-3 align-items-center d-flex">
+                                <i class="fa-regular fa-square-check me-1 h5 text-primary"></i>
+                                Add
+                            </a>
                         </div>
                     </div>
                 </div>
