--- a/Views/Employee/Add.cshtml
+++ b/Views/Employee/Add.cshtml
@@ -14,6 +14,11 @@
                                 <h4 class="me-2 h4">Add Employee</h4>
                             </div>
                         </div>
+                        <div>
+                            <button class="submit border-0 bg-transparent h4 me-2 text-success">
+                                <i class="fa-solid fa-square-check"></i>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -24,115 +29,95 @@
                     <div class="header-title">
                         <h4 class="card-title">About</h4>
                     </div>
-                    <div>
-                        <button class="edit me-2 border-0 bg-transparent text-warning h4">
-                            <i class="fa-regular fa-pen-to-square"></i>
-                        </button>
-                        <button class="submit border-0 bg-transparent h4 text-light">
-                            <i class="fa-regular fa-square-check"></i>
-                        </button>
-                    </div>
                 </div>
                 <div class="card-body">
                     <ul class="list-inline m-0 p-0">
                         <li class="d-flex mb-2">
                             <div class="mb-3 w-100">
-                                <label for="code" class="form-label text-black">Number:</label>
-                                <input type="text" name="code" class="form-control text-black" id="code" value="" disabled>
+                                <label for="code" class="form-label text-black required">Number:</label>
+                                <input type="text" name="code" class="form-control text-black" id="code" required>
                             </div>
                         </li>
                         <li class="d-flex mb-2">
                             <div class="mb-3 w-100">
-                                <label for="name" class="form-label text-black">Name:</label>
-                                <input type="text" name="name" class="form-control text-black" id="name" value="" disabled>
-                                <div id="name-help" class="form-text">We'll never share your email with anyone else.</div>
+                                <label for="name" class="form-label text-black required">Name:</label>
+                                <input type="text" name="name" class="form-control text-black" id="name" required>
                             </div>
                         </li>
                         <li class="d-flex mb-2">
                             <div class="mb-3 w-100">
-                                <label for="gender" class="form-label text-black">Gender:</label>
-                                <select class="form-select text-black" id="gender" name="gender" data-placeholder="Choose gender" disabled>
+                                <label for="gender" class="form-label text-black required">Gender:</label>
+                                <select class="form-select text-black" id="gender" name="gender" data-placeholder="Choose gender" required>
                                     <option selected></option>
                                     <option value="Nam">Nam</option>
                                     <option value="Nữ">Nữ</option>
                                 </select>
-                                <div id="gender-help" class="form-text">We'll never share your email with anyone else.</div>
                             </div>
                         </li>
                         <li class="d-flex mb-2">
                             <div class="mb-3 w-100">
-                                <label for="dob" class="form-label text-black">Date of birth:</label>
-                                <input type="date" name="dob" class="form-control text-black" id="dob" value="" disabled>
-                                <div id="dob-help" class="form-text">We'll never share your email with anyone else.</div>
+                                <label for="dob" class="form-label text-black required">Date of birth:</label>
+                                <input type="date" name="dob" class="form-control text-black" id="dob" required>
                             </div>
                         </li>
                         <li class="d-flex mb-2">
                             <div class="mb-3 w-100">
-                                <label for="address" class="form-label text-black">Address:</label>
-                                <input type="text" name="address" class="form-control text-black" id="address" value="" disabled>
-                                <div id="address-help" class="form-text">We'll never share your email with anyone else.</div>
+                                <label for="address" class="form-label text-black required">Address:</label>
+                                <input type="text" name="address" class="form-control text-black" id="address" required>
                             </div>
                         </li>
                         <li class="d-flex mb-2">
                             <div class="mb-3 w-100">
-                                <label for="id" class="form-label text-black">ID:</label>
-                                <input type="text" name="id" class="form-control text-black" id="id" value="" disabled>
-                                <div id="id-help" class="form-text">We'll never share your email with anyone else.</div>
+                                <label for="id" class="form-label text-black required">ID:</label>
+                                <input type="text" name="id" class="form-control text-black" id="id" required>
                             </div>
                         </li>
                         <li class="d-flex mb-2">
                             <div class="mb-3 w-100">
-                                <label for="placeog" class="form-label text-black">Place of origin:</label>
-                                <input type="text" name="placeog" class="form-control text-black" id="placeog" value="" disabled>
-                                <div id="placeog-help" class="form-text">We'll never share your email with anyone else.</div>
+                                <label for="placeog" class="form-label text-black required">Place of origin:</label>
+                                <input type="text" name="placeog" class="form-control text-black" id="placeog" required>
                             </div>
                         </li>
                         <li class="d-flex mb-2">
                             <div class="mb-3 w-100">
-                                <label for="phone" class="form-label text-black">Phone:</label>
-                                <input type="tel" name="phone" class="form-control text-black" id="phone" value="" disabled>
-                                <div id="phone-help" class="form-text">We'll never share your email with anyone else.</div>
+                                <label for="phone" class="form-label text-black required">Phone:</label>
+                                <input type="tel" name="phone" class="form-control text-black" id="phone" required>
                             </div>
                         </li>
                         <li class="d-flex mb-2">
                             <div class="mb-3 w-100">
-                                <label for="email" class="form-label text-black">Email:</label>
-                                <input type="email" name="email" class="form-control text-black" id="email" value="" disabled>
-                                <div id="email-help" class="form-text">We'll never share your email with anyone else.</div>
+                                <label for="email" class="form-label text-black required">Email:</label>
+                                <input type="email" name="email" class="form-control text-black" id="email" required>
                             </div>
                         </li>
                         <li class="d-flex mb-2">
                             <div class="mb-3 w-100">
                                 <label for="religion" class="form-label text-black">Religion:</label>
-                                <input type="text" name="religion" class="form-control text-black" id="religion" value="" disabled>
-                                <div id="religion-help" class="form-text">We'll never share your email with anyone else.</div>
+                                <input type="text" name="religion" class="form-control text-black" id="religion">
                             </div>
                         </li>
                         <li class="d-flex mb-2">
                             <div class="mb-3 w-100">
-                                <label for="department" class="form-label text-black">Department:</label>
-                                <select class="form-select" id="department" name="department" data-placeholder="Choose one department" disabled>
+                                <label for="department" class="form-label text-black required">Department:</label>
+                                <select class="form-select" id="department" name="department" data-placeholder="Choose one department" required>
                                     <option></option>
                                 </select>
-                                <div id="department-help" class="form-text">We'll never share your email with anyone else.</div>
                             </div>
                         </li>
                         <li class="d-flex mb-2">
                             <div class="mb-3 w-100">
                                 <label for="degrees" class="form-label text-black">Degree(s):</label>
-                                <select class="form-select" id="degrees" name="degrees" data-placeholder="Choose degree(s)" multiple disabled>
+                                <select class="form-select" id="degrees" name="degrees" data-placeholder="Choose degree(s)" multiple>
                                     <option></option>
                                 </select>
-                                <div id="degrees-help" class="form-text">We'll never share your email with anyone else.</div>
                             </div>
                         </li>
                         <li class="d-flex mb-2">
                             <div class="mb-3 w-100">
-                                <label for="contract" class="form-label text-black">Contract:</label>
-                                <select class="form-select" id="contract" name="contract" data-placeholder="Choose one contract" disabled>
+                                <label for="contract" class="form-label text-black required">Contract:</label>
+                                <select class="form-select" id="contract" name="contract" data-placeholder="Choose one contract" required>
                                     <option></option>
                                 </select>
-                                <div id="contract-help" class="form-text">We'll never share your email with anyone else.</div>
                             </div>
                         </li>
                     </ul>
@@ -146,14 +131,8 @@
                         <h4 class="card-title">Projects</h4>
                     </div>
                     <div>
-                        <button class="edit me-2 border-0 bg-transparent text-warning h4">
-                            <i class="fa-regular fa-pen-to-square"></i>
-                        </button>
                         <button class="add me-2 border-0 bg-transparent text-primary h4">
                             <i class="fa-regular fa-square-plus"></i>
-                        </button>
-                        <button class="submit border-0 bg-transparent h4 text-light">
-                            <i class="fa-regular fa-square-check"></i>
                         </button>
                     </div>
                 </div>
@@ -259,7 +238,10 @@
                 $("#about-info .submit").removeClass("text-light").addClass("text-success");
                 $("#name, #gender, #dob, #address, #placeog, #religion, #department, #degrees").prop("disabled", false);
             })
-            $("#about-info .submit").click(function () {
+            $("button.submit").click(function () {
+                if (!validate()) return;
+
+                let emp_num = $("input#code").val();
                 let name = $("input#name").val();
                 let gender = $("select#gender").val();
                 let dob = $("input#dob").val();
@@ -282,28 +264,31 @@
                     degrees: JSON.stringify(degrees)
                 }
                 console.log(data);
-                $.ajax({
-                    url: "/employee/editsubmit",
-                    data: data,
-                    type: "POST",
-                    success: function (result) {
-                        switch (result.status) {
-                            case StatusCode.Success:
-                                $(".emp-name").text(name);
+                //$.ajax({
+                //    url: "/employee/addsubmit",
+                //    data: data,
+                //    type: "POST",
+                //    success: function (result) {
+                //        switch (result.status) {
+                //            case StatusCode.Success:
+                //                $(".emp-name").text(name);
 
-                                $(this).removeClass("text-success").addClass("text-light");
-                                $("#about-info .edit, #projects-info .edit").removeClass("text-light").addClass("text-danger");
-                                $("#projects-info .add").removeClass("text-light").addClass("text-primary");
-                                $("#name, #gender, #dob, #address, #placeog, #religion, #department, #degrees").prop("disabled", true);
+                //                $(this).removeClass("text-success").addClass("text-light");
+                //                $("#about-info .edit, #projects-info .edit").removeClass("text-light").addClass("text-danger");
+                //                $("#projects-info .add").removeClass("text-light").addClass("text-primary");
+                //                $("#name, #gender, #dob, #address, #placeog, #religion, #department, #degrees").prop("disabled", true);
 
-                                AppendAlert("Update successfully!", StatusAlert.Success);
-                                break;
-                            default:
-                                AppendAlert("Error!", StatusAlert.Error);
-                                break;
-                        }
-                    }
-                })
+                //                AppendAlert("Update successfully!", StatusAlert.Success);
+                //                break;
+                //            case StatusCode.NotFound:
+                //                AppendAlert(result.message, StatusAlert.Warning);
+                //                break;
+                //            default:
+                //                AppendAlert("Error!", StatusAlert.Error);
+                //                break;
+                //        }
+                //    }
+                //})
             })
 
             // Projects info
