add style section in _Layout header

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -38,6 +38,8 @@
     <!-- Select2 Bootstrap Theme Css -->
     <link rel="stylesheet" href="/Content/assets/vendor/select2/select2-bootstrap-5-theme.min.css" />
 
+    @RenderSection("style", false)
+
     <!-- Custom Css -->
     <link rel="stylesheet" href="/Content/Site.css" />
 
